--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,44 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!-- Example Toolbar -->
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+    <!-- Container for fragments -->
+    <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:title="Home"
-        android:titleTextColor="#FFFFFF"
-        android:background="#6200EE"/>
+        android:layout_height="match_parent"
+        android:layout_above="@id/bottom_navigation" />
 
-    <!-- Categories Section -->
-    <TextView
-        android:id="@+id/tvCategories"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Categories"
-        android:textSize="20sp"
-        android:layout_below="@id/toolbar"
-        android:layout_marginTop="20dp"/>
-
-    <!-- Popular Products Section -->
-    <TextView
-        android:id="@+id/tvPopularProducts"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Popular Products"
-        android:textSize="20sp"
-        android:layout_below="@id/tvCategories"
-        android:layout_marginTop="20dp"/>
-
-    <!-- Bottom Navigation Bar -->
+    <!-- Bottom Navigation View -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNav"
+        android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:menu="@menu/bottom_nav_menu" /> <!-- Correct usage -->
+        android:background="?android:attr/windowBackground"
+        app:menu="@menu/bottom_nav_menu" />
 
 </RelativeLayout>
