--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -6,10 +6,18 @@
         android:title="Home" />
     <item
         android:id="@+id/nav_categories"
-        android:icon="@drawable/home"
-        android:title="Categories" />
+        android:icon="@drawable/search"
+        android:title="Search" />
+    <item
+        android:id="@+id/nav_favourite"
+        android:icon="@drawable/favourite"
+        android:title="Favouite" />
     <item
         android:id="@+id/nav_profile"
-        android:icon="@drawable/home"
+        android:icon="@drawable/profile"
         android:title="Profile" />
 </menu>
+
+
+
+
