--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#DB0909</color>
+    <color name="green">#77E67B</color>
+    <color name="purple">#C15DEF</color>
+
 </resources>
